--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ PyHamcrest==1.9.0
 pymongo==3.7.1
 pyOpenSSL==18.0.0
 python-dateutil==2.7.3
+python-dotenv==0.8.2
 pytz==2018.5
 pyzmq==17.1.0
 requests==2.19.1
